--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "portal-vue": "2.1.7",
     "postcss-rtl": "1.7.3",
     "prismjs": "1.19.0",
+    "suneditor": "^2.45.1",
     "swiper": "5.4.5",
     "uuid": "8.3.2",
     "v-mask": "^2.2.4",
