--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fullcalendar/list": "5.5.0",
     "@fullcalendar/timegrid": "5.5.0",
     "@fullcalendar/vue": "5.5.0",
+    "@tinymce/tinymce-vue": "^3.2.8",
     "@vue/composition-api": "^1.6.2",
     "@vueuse/core": "4.0.0",
     "animate.css": "4.1.1",
@@ -62,6 +63,7 @@
     "vue-toastification": "1.7.8",
     "vue-tour": "1.5.0",
     "vue-tree-halower": "1.8.3",
+    "vue-uuid": "^3.0.0",
     "vue2-datepicker": "^3.10.1",
     "vue2-google-maps": "^0.10.7",
     "vue2-leaflet": "2.5.2",
